--- a/css/application.css
+++ b/css/application.css
@@ -1,10 +1,10 @@
 html {
   min-height: 100%;
   background: #fe9595; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(#fe9595, #fefe95); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#fe9595, #fefe95); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#fe9595, #fefe95); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#fe9595, #fefe95); /* Standard syntax */
+  background: -webkit-linear-gradient(#fe9595, #fee086); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#fe9595, #fee086); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#fe9595, #fee086); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#fe9595, #fee086); /* Standard syntax */
 }
 
 
@@ -44,10 +44,6 @@ div .cell {
   text-align: center;
   margin: 2px 1px 2px 1px;
   box-sizing: border-box;
-}
-
-div .cell-0-0 {
-
 }
 
 div .drums {
