--- a/css/application.css
+++ b/css/application.css
@@ -8,7 +8,43 @@ body {
   font-family: 'Titillium Web', sans-serif;
 }
 
+#out {
+	position: absolute;
+	top: 0;
+	left: 0;
+	font-size: 20px;
+	color: "white";
+}
+
 #background {
 
 }
 
+#solids {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+#stars {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+#sparkles {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+#out {
+	position: absolute;
+	top: 10px;
+	left: 20px;
+	width: 50px;
+	height: 50px;
+	font-size: 20px;
+	z-index: 100;
+	color: white;
+}
