--- a/css/application.css
+++ b/css/application.css
@@ -1,11 +1,10 @@
 html {
-	height: 100%;
-	overflow: ;auto
+	max-height: 8000px;
 }
 
 html, body {
   width:  100%;
-  height: 100%;
+  height: 400%;
   margin: 0px;
 }
 
@@ -64,4 +63,22 @@ body {
 	left: 0;
 	z-index: 101;
 }
+
+/*#sky {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 34%;
+	width: 100%;
+	background: rgba(0, 153, 230, 1);
+}
+
+#ocean {
+	position: fixed;
+	top: 33.2%;
+	left: 0;
+	height: 66.8%;
+	width: 100%;
+	background: linear-gradient(0, rgba(40, 114, 189, 1), rgba(76, 177, 255, 1));
+}*/
 
