--- a/css/application.css
+++ b/css/application.css
@@ -1,10 +1,10 @@
 html {
-	max-height: 8000px;
+	max-height: 30000px;
 }
 
 html, body {
   width:  100%;
-  height: 400%;
+  height: 1600%;
   margin: 0px;
 }
 
@@ -18,22 +18,32 @@ body {
 
 }
 
-#solids {
+#sky {
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: 1;
 }
 
 #stars {
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: 2;
+}
+
+#water {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 3;
 }
 
 #sparkles {
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: 4;
 }
 
 #out {
