--- a/css/application.css
+++ b/css/application.css
@@ -36,14 +36,14 @@ body {
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 3;
+	z-index: 4;
 }
 
 #sparkles {
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 4;
+	z-index: 5;
 }
 
 #out {
@@ -65,6 +65,78 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
+}
+
+nav {
+	
+}
+ul {
+	position: fixed;
+    width:100%;
+    display:table;
+    margin:4em auto;
+    padding:0;
+    border-collapse:collapse;
+    border-radius:.25em;
+    box-shadow:#d0d0d0 0px 0px 0px 1px;
+    -webkit-transition:all .15s ease-in-out;
+    -moz-transition:all .15s ease-in-out;
+    transition:all .15s ease-in-out;
+    z-index: 10;
+}
+
+nav li{
+    display:table-cell;
+    width:10%;
+    margin:0;
+    padding:0;
+    text-align:center;
+    box-sizing:border-box;
+    border-left:#e0e0e0 1px solid;
+    border-right:#e0e0e0 1px solid;
+}
+
+nav li:first-child {
+	border-left:0;
+	border-top-left-radius: .25em; 
+	border-bottom-left-radius: .25em;
+}
+nav li:last-child div{
+	border-left:0;
+	border-top-right-radius: .25em; 
+	border-bottom-right-radius: .25em;
+}
+.button {
+	display:block;
+    width:100%;
+    padding:1em 0;
+    text-shadow:rgba(255,255,255,0.5) 0px 1px 0px;
+    background-color:#f0f0f0;
+    background-image:-webkit-linear-gradient(#f8f8f8, #f0f0f0);
+    box-shadow:inset rgba(255,255,255,0.5) -1px 0 0;
+}
+
+.button:hover {
+	background-color:#f8f8f8;
+    background-image:-webkit-linear-gradient(#fff, #f0f0f0);
+}
+
+.button:active {
+	background-color:#e0e0e0;
+    background-image:-webkit-linear-gradient(#f0f0f0, #e0e0e0);
+    box-shadow:inset rgba(0,0,0,0.2) 0 1px 2px;
+}
+
+.button-text {
+	display:inline-block;
+    vertical-align:middle;
+}
+
+.material-icons {
+	display:inline-block;
+    vertical-align:middle;
+    padding:0 .15em;
+    fill:#333;
 }
 
 #paragraphs {
