--- a/css/application.css
+++ b/css/application.css
@@ -3,14 +3,15 @@ html {
 }
 
 html, body {
-  width:  100%;
-  height: 1600%;
-  margin: 0px;
+	min-width: 200px;
+	width:  100%;
+	height: 1600%;
+	margin: 0px;
 }
 
 body {
-  font-family: 'Titillium Web', sans-serif;
-  height: 100%;
+	font-family: 'Titillium Web', sans-serif;
+	height: 100%;
 }
 
 #background {
@@ -27,7 +28,7 @@ body {
 
 #stars {
 	position: fixed;
-	top: 0;
+	top: -10%;
 	left: 0;
 	z-index: 2;
 }
@@ -70,11 +71,13 @@ body {
 nav {
 	
 }
+
 ul {
 	position: fixed;
     width:100%;
+    bottom: 0px;
     display:table;
-    margin:4em auto;
+    margin:0;
     padding:0;
     border-collapse:collapse;
     border-radius:.25em;
@@ -94,6 +97,10 @@ nav li{
     box-sizing:border-box;
     border-left:#e0e0e0 1px solid;
     border-right:#e0e0e0 1px solid;
+}
+
+nav li:hover {
+	box-shadow:#b0b0b0 0px 0px 0px 1px, rgba(0,0,0,0.2) 0px 1px 2px;
 }
 
 nav li:first-child {
@@ -117,8 +124,8 @@ nav li:last-child div{
 }
 
 .button:hover {
-	background-color:#f8f8f8;
-    background-image:-webkit-linear-gradient(#fff, #f0f0f0);
+	background-color: #f8f8f8;
+    background-image:-webkit-linear-gradient(#fbfbfb, #f0f0f0)
 }
 
 .button:active {
@@ -130,6 +137,9 @@ nav li:last-child div{
 .button-text {
 	display:inline-block;
     vertical-align:middle;
+}
+
+.button-symbols {
 }
 
 .material-icons {
